--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "watch":"node-sass --watch src/resource/scss -o src/public/css",
-    "start":"nodemon --inspect src/index.js",
+    "beautiful": "lint-staged",
+    "watch": "node-sass --watch src/resource/scss -o src/public/css",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --write --tab-width 4"
   },
   "repository": {
     "type": "git",
@@ -24,6 +28,7 @@
   },
   "devDependencies": {
     "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "morgan": "^1.10.0",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12",
