--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "watch": "node-sass --watch src/resource/scss -o src/public/css",
     "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare":"husky install",
-    "pre-commit": "lint-staged"
+    "prepare":"husky install"
   },
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --write --tab-width 4"
