--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "beautiful": "lint-staged",
+        "beautiful": "prettier --prose-wrap --single-quote --trailing-comma all --write --tab-width 4 src/**/*.{js,json,scss}",
         "watch": "node-sass --watch src/resource/scss -o src/public/css",
         "start": "nodemon --inspect src/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "prepare": "husky install"
-    },
-    "lint-staged": {
-        "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --write --tab-width 4"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
@@ -28,8 +24,6 @@
         "express-handlebars": "^5.3.3"
     },
     "devDependencies": {
-        "husky": "^7.0.2",
-        "lint-staged": "^11.1.2",
         "morgan": "^1.10.0",
         "node-sass": "^6.0.1",
         "nodemon": "^2.0.12",
