--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "homepage": "https://github.com/nguyenphusang12/blog_new#readme",
     "dependencies": {
         "express": "^4.17.1",
-        "express-handlebars": "^5.3.3"
+        "express-handlebars": "^5.3.3",
+        "mongoose": "^6.0.3"
     },
     "devDependencies": {
         "morgan": "^1.10.0",
