--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "beautiful": "prettier --prose-wrap --single-quote --trailing-comma all --write --tab-width 4 src/**/*.{js,json,scss}",
+        "beautiful": "prettier --single-quote --trailing-comma all --write --tab-width 4 src/**/*.{js,json,scss}",
         "watch": "node-sass --watch src/resource/scss -o src/public/css",
         "start": "nodemon --inspect src/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,7 +22,9 @@
     "dependencies": {
         "express": "^4.17.1",
         "express-handlebars": "^5.3.3",
-        "mongoose": "^6.0.3"
+        "method-override": "^3.0.0",
+        "mongoose": "^6.0.3",
+        "mongoose-slug-generator": "^1.0.4"
     },
     "devDependencies": {
         "morgan": "^1.10.0",
